--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,11 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "packageManager": "pnpm@9.0.0",
-  "keywords": ["music", "streaming", "api"],
+  "keywords": [
+    "music",
+    "streaming",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -22,13 +26,15 @@
     "express": "^4.21.1",
     "firebase-admin": "^13.0.1",
     "mongoose": "^8.8.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
+    "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
