chore(project): Set up monorepo configuration and Firebase config management
- Add root package.json with monorepo scripts and pnpm workspace configuration
- Update .gitignore to exclude node_modules and firebase-config.json
- Migrate Firebase configuration from environment variables to separate JSON file
- Update backend and frontend Firebase initialization to use new config approach
- Modify backend .env.example to remove Firebase-specific environment variables
- Add pnpm-lock.yaml and pnpm-workspace.yaml for dependency management
- Update tsconfig to include firebase-config.json in build process
- Improve configuration management for more secure and flexible setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,15 @@
 # Server Configuration
-PORT=3000
+PORT=3001
 NODE_ENV=development
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/online-music-player
 
-# Firebase Configuration
-FIREBASE_PROJECT_ID=your-project-id
-FIREBASE_PRIVATE_KEY=your-private-key
-FIREBASE_CLIENT_EMAIL=your-client-email
-
-# Cloudflare R2 Configuration
+# Cloudflare R2 Configuration (for music file storage)
 R2_ACCOUNT_ID=your-account-id
 R2_ACCESS_KEY_ID=your-access-key-id
 R2_SECRET_ACCESS_KEY=your-secret-access-key
 R2_BUCKET_NAME=your-bucket-name
 R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+
+# Note: Firebase configuration is now in firebase-config.json
