Configure frontend deployment on Vercel with environment variables and documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,4 +12,4 @@ R2_SECRET_ACCESS_KEY=your-secret-access-key
 R2_BUCKET_NAME=your-bucket-name
 R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
 
-# Note: Firebase configuration is now in firebase-config.json
+# Note: Firebase configuration is in firebase-config.json
