--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
     "music",
     "streaming",
