--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -33,6 +33,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Firebase config (use environment variables in production)
+firebase-config.json
+
 # vercel
 .vercel
 
