feat(backend): Improve playlist data transformation and handling
- Update playlist controller to transform playlist data for frontend compatibility
- Modify Playlist model to use Firebase UID instead of MongoDB ObjectId
- Update package.json and render.yaml to use simplified 'backend' name
- Enhance useAudioPlayer hook with auto-play functionality
- Refactor API calls to handle playlist data transformation
- Update monorepo scripts to use 'backend' filter instead of full project name
Ensures consistent data structure between backend and frontend, improves type safety, and simplifies project configuration.

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: online-music-player-backend
+    name: backend
     env: node
     region: oregon
     plan: free
