--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-music-player-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "Backend API for online music player",
   "main": "dist/index.js",
