--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "description": "Online Music Player - Monorepo",
   "scripts": {
     "dev": "concurrently \"pnpm:dev:backend\" \"pnpm:dev:frontend\"",
-    "dev:backend": "pnpm --filter online-music-player-backend dev",
+    "dev:backend": "pnpm --filter backend dev",
     "dev:frontend": "pnpm --filter frontend dev",
-    "build": "pnpm --filter online-music-player-backend build && pnpm --filter frontend build",
-    "build:backend": "pnpm --filter online-music-player-backend build",
+    "build": "pnpm --filter backend build && pnpm --filter frontend build",
+    "build:backend": "pnpm --filter backend build",
     "build:frontend": "pnpm --filter frontend build",
     "start": "concurrently \"pnpm:start:backend\" \"pnpm:start:frontend\"",
-    "start:backend": "pnpm --filter online-music-player-backend start",
+    "start:backend": "pnpm --filter backend start",
     "start:frontend": "pnpm --filter frontend start",
-    "lint": "pnpm --filter online-music-player-backend lint && pnpm --filter frontend lint",
-    "lint:fix": "pnpm --filter online-music-player-backend lint:fix"
+    "lint": "pnpm --filter backend lint && pnpm --filter frontend lint",
+    "lint:fix": "pnpm --filter backend lint:fix"
   },
   "packageManager": "pnpm@9.0.0",
   "devDependencies": {
