feat: Complete modern UI redesign with gradients and pastel colors
- Redesigned navigation header with gradient background and refined user menu
- Implemented compact audio player (64px) with glassmorphic design and smaller controls
- Added theme constants file for standardized colors and gradients
- Updated all pages with pastel gradient backgrounds and modern styling
- Redesigned playlist cards to be smaller, cleaner, and more elegant
- Simplified all dropdowns and menus with reduced padding and spacing
- Fixed input visibility in login/signup pages
- Improved button designs with gradient effects throughout
- Enhanced accessibility with proper focus states and touch targets
- Standardized color usage across all components using theme constants

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-music-player-monorepo",
+  "name": "@bhaireshm/music-player",
   "version": "1.0.0",
   "private": true,
   "description": "Online Music Player - Monorepo",
