--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Server Configuration
 PORT=3001
 NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/online-music-player
