--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -13,6 +13,8 @@ services:
         value: production
       - key: PORT
         value: 3000
+      - key: FRONTEND_URL
+        sync: false
       - key: MONGODB_URI
         sync: false
       - key: R2_ACCOUNT_ID
