refactor: rename project from 'Music Player' to 'Naada'
Naada (ನದ) means 'sound' or 'music' in Sanskrit and Kannada

Changes:
- Update all package.json files with new name
- Update Navigation component branding
- Update HTML metadata and page titles
- Update PWA manifest (name, short_name, description)
- Update README with new name and meaning
- Update service worker comments
- Change tagline to 'Your Music Library'

The multi-artist parsing already handles comma-separated artists
like 'Gopi Sundar, Vijay Yesudas, Haricharan' correctly.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "naada-backend",
   "version": "1.0.0",
-  "description": "Backend API for online music player",
+  "description": "Backend API for Naada Music Library",
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
