--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^11.10.0",
+    "musicbrainz-api": "^0.26.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
