--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.700.0",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
