feat: enhance queue system and mobile UI
- Implement drag-and-drop queue reordering using @hello-pangea/dnd
- Add logic to auto-remove songs from queue after playback
- Fix mobile overlay visibility issues using Portal
- Optimize Song Details page layout (reduced spacing, smaller album art on mobile)
- Move 'Delete Song' action to context menu in mobile player
- Fix hydration issues with StrictModeDroppable

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@mantine/core": "^8.3.7",
     "@mantine/form": "^8.3.7",
     "@mantine/hooks": "^8.3.7",
