fix: prevent out-of-memory errors on Render free tier
- Set NODE_OPTIONS to limit heap size to 384MB (512MB tier)
- Add batch processing limit (10 songs) to fingerprint regeneration
- Update package.json scripts with memory limits
- Prevents 'JavaScript heap out of memory' fatal errors

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,9 @@ RUN apt-get update && \
 # Verify fpcalc installation
 RUN which fpcalc && fpcalc -version
 
+# Set Node.js memory limit for Render's 512MB free tier
+ENV NODE_OPTIONS="--max-old-space-size=384"
+
 # Set working directory
 WORKDIR /app
 
